modify appsetting dev and index view

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /BulkyBookWeb/appsettings.json
+/BulkyBookWeb/appsettings.Development.json
